--- a/public/html/subscribeConfirmation.html
+++ b/public/html/subscribeConfirmation.html
@@ -26,10 +26,10 @@
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
-                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="projects.html">Projetos</a></li>
-                            <li class="nav-item"><a class="nav-link" href="projectWinner.html">Atual vencedor</a></li>
-                            <li class="nav-item"><a class="nav-link" href="personSubscribe.html">Inscrição</a></li>
+                            <li class="nav-item"><a class="nav-link" href="../html/index.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="../html/projects.html">Projetos</a></li>
+                            <li class="nav-item"><a class="nav-link" href="../html/projectWinner.html">Atual vencedor</a></li>
+                            <li class="nav-item"><a class="nav-link" href="../html/personSubscribe.html">Inscrição</a></li>
                         </ul>
                     </div>
                 </div>
@@ -38,7 +38,7 @@
             <section class="py-5">
                 <div class="container px-5 mb-5">
                     <div class="text-center mb-5">
-                        <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Projetos</span></h1>
+                        <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Inscrição realizada com sucesso!</span></h1>
                     </div>
                     <div class="row gx-5 justify-content-center">
                         <div class="col-lg-11 col-xl-9 col-xxl-8 project-container">
@@ -46,28 +46,12 @@
                         </div>
                         <!-- Votação projeto -->
                         <div class="col-lg-8 col-xl-6 align-items-center">
-                            <div class="text-center mb-5"><span class="text-gradient d-inline display-5 mb-0">Vote em um projeto</span></div>
-                            <form id="contactForm">
-                                <div class="form-floating mb-3">
-                                    <input class="form-control" name="nome_projeto" id="name" type="text" placeholder="Escreva o nome do projeto que você achou mais interessante" data-sb-validations="required" />
-                                    <label for="name">Nome do projeto</label>
-                                    <div class="invalid-feedback" data-sb-feedback="name:required">Digite o nome do projeto</div>
-                                </div>
-                                <div class="d-grid"><button class="btn btn-primary btn-lg" id="submitButton" type="submit">Votar</button></div>
-                            </form>
+                            <div class="text-center mb-5"><span class="text-gradient d-inline display-5 mb-0">Agradecemos a participação</span></div>
                         </div>
                     </div> 
                 </div>
             </section>
             <!-- Call to action section-->
-            <section class="py-5 bg-gradient-primary-to-secondary text-white">
-                <div class="container px-5 my-5">
-                    <div class="text-center">
-                        <h2 class="display-4 fw-bolder mb-4">Compartilhe seus conhecimentos</h2>
-                        <a class="btn btn-outline-light btn-lg px-5 py-3 fs-6 fw-bolder" href="projectSubscribe.html">Inscreva seu projeto</a>
-                    </div>
-                </div>
-            </section>
         </main>
         <!-- Footer-->
         <footer class="bg-white py-4 mt-auto">
