--- a/public/html/projects.html
+++ b/public/html/projects.html
@@ -87,6 +87,6 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scriptProjects.js"></script>
+        <script src="../js/scriptProjects.js"></script>
     </body>
 </html>
