Criando a rota post aluno

--- a/public/html/personSubscribe.html
+++ b/public/html/personSubscribe.html
@@ -71,7 +71,7 @@
                                     </div>
                                     <!-- Prontuário input-->
                                     <div class="form-floating mb-3">
-                                        <input class="form-control" name="Prontuario" id="name" type="text" placeholder="Prontuário" required />
+                                        <input class="form-control" name="prontuario" id="name" type="text" placeholder="Prontuário" required />
                                         <label for="name">Prontuário</label>
                                     </div>
                                     <!-- Data nascimento input-->
