Criando as divs de projeto na página projetos

--- a/public/html/projects.html
+++ b/public/html/projects.html
@@ -41,7 +41,7 @@
                         <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Projetos</span></h1>
                     </div>
                     <div class="row gx-5 justify-content-center">
-                        <div class="col-lg-11 col-xl-9 col-xxl-8 project-container">
+                        <div class="col-lg-11 col-xl-9 col-xxl-8 project-container d-flex flex-column">
                         <!-- Cards dos projetos criados dinâmicamente com js-->
                         </div>
                         <!-- Votação projeto -->
