--- a/public/html/projectsAfterVote.html
+++ b/public/html/projectsAfterVote.html
@@ -26,10 +26,10 @@
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
-                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="projects.html">Projetos</a></li>
-                            <li class="nav-item"><a class="nav-link" href="projectWinner.html">Atual vencedor</a></li>
-                            <li class="nav-item"><a class="nav-link" href="personSubscribe.html">Inscrição</a></li>
+                            <li class="nav-item"><a class="nav-link" href="../html/index.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="../html/projects.html">Projetos</a></li>
+                            <li class="nav-item"><a class="nav-link" href="../html/projectWinner.html">Atual vencedor</a></li>
+                            <li class="nav-item"><a class="nav-link" href="../html/personSubscribe.html">Inscrição</a></li>
                         </ul>
                     </div>
                 </div>
@@ -46,15 +46,7 @@
                         </div>
                         <!-- Votação projeto -->
                         <div class="col-lg-8 col-xl-6 align-items-center">
-                            <div class="text-center mb-5"><span class="text-gradient d-inline display-5 mb-0">Vote em um projeto</span></div>
-                            <form id="contactForm" action="/projectsVote/post" method="post">
-                                <div class="form-floating mb-3">
-                                    <input class="form-control" name="nome_projeto" id="name" type="text" placeholder="Escreva o nome do projeto que você achou mais interessante" data-sb-validations="required" />
-                                    <label for="name">Nome do projeto</label>
-                                    <div class="invalid-feedback" data-sb-feedback="name:required">Digite o nome do projeto</div>
-                                </div>
-                                <div class="d-grid"><button class="btn btn-primary btn-lg" id="submitButton" type="submit">Votar</button></div>
-                            </form>
+                            <div class="text-center mb-5"><span class="text-gradient d-inline display-5 mb-0">Obrigado por votar!</span></div>
                         </div>
                     </div> 
                 </div>
