Finalizando rota votação

--- a/public/html/somethingWentWrong.html
+++ b/public/html/somethingWentWrong.html
@@ -38,7 +38,7 @@
             <section class="py-5">
                 <div class="container px-5 mb-5">
                     <div class="text-center mb-5">
-                        <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Inscrição falhou!</span></h1>
+                        <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Algo deu errado!</span></h1>
                     </div>
                     <div class="row gx-5 justify-content-center">
                         <div class="col-lg-11 col-xl-9 col-xxl-8 project-container">
@@ -46,7 +46,7 @@
                         </div>
                         <!-- Votação projeto -->
                         <div class="col-lg-8 col-xl-6 align-items-center">
-                            <div class="text-center mb-5"><span class="text-gradient d-inline display-5 mb-0">Retorne à página e tente novamente</span></div>
+                            <div class="text-center mb-5"><span class="text-gradient d-inline display-5 mb-0">Sinta-se à vontade de tentar novamente! </span></div>
                         </div>
                     </div> 
                 </div>
