--- a/public/html/projectsAfterVote.html
+++ b/public/html/projectsAfterVote.html
@@ -55,7 +55,7 @@
                 <div class="container px-5 my-5">
                     <div class="text-center">
                         <h2 class="display-4 fw-bolder mb-4">Compartilhe seus conhecimentos</h2>
-                        <a class="btn btn-outline-light btn-lg px-5 py-3 fs-6 fw-bolder" href="projectSubscribe.html">Inscreva seu projeto</a>
+                        <a class="btn btn-outline-light btn-lg px-5 py-3 fs-6 fw-bolder" href="../html/projectSubscribe.html">Inscreva seu projeto</a>
                     </div>
                 </div>
             </section>
