--- a/public/html/index.html
+++ b/public/html/index.html
@@ -186,7 +186,7 @@
                                 <div class="d-flex justify-content-center fs-2 gap-4">
                                     <a class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a>
                                     <a class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
-                                    <a class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
+                                    <a class="text-gradient" target="_blank" href="https://github.com/startbootstrap/startbootstrap-personal"><i class="bi bi-github"></i></a>
                                 </div>
                             </div>
                         </div>
